--- a/Fundraising/wwwroot/ProductPage/product.html
+++ b/Fundraising/wwwroot/ProductPage/product.html
@@ -72,7 +72,7 @@
                     </div>
                     <!--<h1>{{followList}}</h1>-->
                     <div class="row">
-                        <div class="col-6 px-3" v-on:click="delfollow()" v-if="followList > 0"><button type="button" class="follow btn btn-light" style="width:110%">取消追蹤</button></div>
+                        <div class="col-6 px-3" v-on:click="delfollow()" v-if="followList > 0"><button type="button" class="follow btn btn-secondary" style="width:110%">已追蹤</button></div>
                         <div class="col-6 px-3" v-on:click="addfollow()" v-else><button type="button" class="follow btn btn-light" style="width:110%">追蹤專案</button></div>
                         <div class="col-6 px-3"><button type="button" class="btn btn-success" style="width:110%">傳送訊息</button></div>
                     </div>
