--- a/Fundraising/wwwroot/ProductPage/orderpay.html
+++ b/Fundraising/wwwroot/ProductPage/orderpay.html
@@ -168,7 +168,7 @@
                 <div class="col-sm-7">
                     <div>
                         <div>
-                            <h4>付款資料</h4>
+                            <h4>收件人資料</h4>
                         </div>
                     </div>
 
