--- a/Fundraising/wwwroot/ProductPage/comments.html
+++ b/Fundraising/wwwroot/ProductPage/comments.html
@@ -233,7 +233,7 @@
         </div>
         <div class="container" v-else>
             <br>
-            <h1>還沒有人流言。</h1>
+            <h1>還沒有人留言。</h1>
         </div>
     </div>
 
