--- a/Fundraising/wwwroot/MemberCentre/ProjectManage.html
+++ b/Fundraising/wwwroot/MemberCentre/ProjectManage.html
@@ -155,7 +155,12 @@
                     />
                   </svg>
                 </button>
-                <button class="btn" @click="chat(order)">
+                <button
+                  class="btn"
+                  data-bs-toggle="modal"
+                  data-bs-target="#chatmodal"
+                  :data-bs-whatever="order.ouserId"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -205,6 +210,7 @@
       </div>
 
       <!-- modal -->
+      <!-- 詳細內容 -->
       <div
         class="modal fade"
         id="orderdetail"
@@ -240,9 +246,62 @@
                 class="btn btn-secondary"
                 data-bs-dismiss="modal"
               >
-                Close
+                關閉
               </button>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 發送訊息 -->
+      <div
+        class="modal fade"
+        id="chatmodal"
+        tabindex="-1"
+        aria-hidden="true"
+        ref="chat"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">
+                傳送訊息給 <strong>{{chatting}}</strong>
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <form>
+              <div class="modal-body">
+                <div class="mb-3">
+                  <label for="message-text" class="col-form-label"
+                    >請輸入傳送的訊息內容 :</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="messageContent"
+                    placeholder="訊息內容"
+                    required
+                    v-model="messageContent"
+                  ></textarea>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" @click="send" class="btn btn-success">
+                  傳送
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  關閉
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
