--- a/Fundraising/wwwroot/MemberCentre/UserInfo.html
+++ b/Fundraising/wwwroot/MemberCentre/UserInfo.html
@@ -51,6 +51,10 @@
         border-radius: 0.55rem;
         position: relative;
       }
+
+      .text-muted {
+        margin-bottom: 0;
+      }
     </style>
     <title>個人頁面</title>
   </head>
