--- a/Fundraising/wwwroot/MemberCentre/UserMessage.html
+++ b/Fundraising/wwwroot/MemberCentre/UserMessage.html
@@ -84,9 +84,7 @@
                 <img :src="chattingPhoto" alt="avatar" />
                 <div class="chat-about">
                   <h6 class="m-b-0">{{chattingname}}</h6>
-                  <small v-if="chattinglasttime"
-                    >上次訊息: {{chattinglasttime}}</small
-                  >
+                  <small>上次訊息: {{chattinglasttime}}</small>
                 </div>
               </div>
 
